# 8086

./: CMakeLists.txt
bios/: pcxtbios.asm
bootloader/: hello_world.asm
include/: 80x86.h  addressing.h  cpu.h  debug.h  disassembly.h  instructions.h  io.h  machine.h  memory.h  opcodes.h  testing.h
src/: addressing.c  cpu.c  debug.c  disassembly.c  hexdump.c  machine.c  memory.c  opcodes.c
src/instructions/: arithmetic.c  bcdcnv.c  bitwise.c  control.c  io.c  jumps.c  movs.c  rotates.c  shifts.c  stack.c  strings.c  support.c
tests/: test_add.c  test_bcdcnv.c  test_bitwise.c  test_cmpneg.c  test_control.c  test_cpu.c  test_datatrnf.c  test_div.c  test_hello_world_bootloader.c  test_interrupt.c  test_jmpmov.c  test_jump1.c  test_jump2.c  test_mul.c  test_pcxtbios.c  test_rep.c  test_rotate.c  test_segpr.c  test_shifts.c  test_strings.c  test_sub.c  testing80x86.h
tests/artlav/: test_add.c  test_bcdcnv.c  test_bitwise.c  test_cmpneg.c  test_control.c  test_datatrnf.c  test_div.c  test_interrupt.c  test_jmpmov.c  test_jump1.c  test_jump2.c  test_mul.c  test_rep.c  test_rotate.c  test_segpr.c  test_shifts.c  test_strings.c  test_sub.c
